fix(build): fix MTProto sync failure under obfuscation by keeping tgnet and disabling optimizations